--- a/pixel_art_page.html
+++ b/pixel_art_page.html
@@ -11,7 +11,7 @@
       width: 100%;
       height: 100%;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #1e1e2f;
+      background: #252525;
       color: #fff;
       overflow: hidden;
     }
@@ -19,12 +19,12 @@
     .container {
       display: grid;
       width: 100%;
-      height: 100%;
+      height: calc(100% - 60px);
       gap: 10px;
       padding: 10px;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(2, 1fr);
-      box-sizing: border-box;
+      margin-top: 60px;
     }
 
     .section {
@@ -52,6 +52,22 @@
       z-index: 2;
     }
 
+    .download-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: rgba(0, 0, 0, 0);
+      color: #fff;
+      border: 1px solid #ffffff00;
+      padding: 4px 8px;
+      font-size: 0.8rem;
+      cursor: pointer;
+      z-index: 3;
+    }
+    .download-btn:hover {
+      background: #3b63ae;
+    }
+
     .slider-container {
       position: absolute;
       bottom: 10px;
@@ -61,16 +77,108 @@
       z-index: 2;
     }
 
-    input[type=range] { width: 100%; }
+    /* Common blocky slider style */
+    input[type=range] {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 100%;
+      height: 20px;
+      margin-top: 6px;
+      cursor: pointer;
+    }
+
+    input[type=range]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 20px;
+      height: 20px;
+      background: #fff;
+      border: 2px solid #000;
+      box-shadow: 2px 2px 0 #000;
+      cursor: pointer;
+    }
+    input[type=range]::-moz-range-thumb {
+      width: 20px;
+      height: 20px;
+      background: #fff;
+      border: 2px solid #000;
+      box-shadow: 2px 2px 0 #000;
+      cursor: pointer;
+    }
+
+    /* Scanline theme slider */
+    #scanlineSlider {
+      background: repeating-linear-gradient(
+        0deg,
+        #222,
+        #222 2px,
+        #555 2px,
+        #555 4px
+      );
+      border: 2px solid #fff;
+    }
+
+    /* ASCII black & white slider */
+    #asciiSlider {
+      background: #000;
+      border: 2px solid #fff;
+    }
+    #asciiSlider::-webkit-slider-thumb {
+      background: #fff;
+      border: 2px solid #fff;
+    }
+    #asciiSlider::-moz-range-thumb {
+      background: #000;
+      border: 2px solid #fff;
+    }
+
+    /* Pixel-art chunky colorful sliders */
+    #pixelSlider, #colorSlider {
+      background: repeating-linear-gradient(
+        0deg,
+        #222,
+        #222 2px,
+        #555 2px,
+        #555 4px
+      );
+      border: 2px solid #222;
+      image-rendering: pixelated;
+      box-shadow: inset 0 0 4px #000, 2px 2px 0 #000;
+    }
+    #pixelSlider::-webkit-slider-thumb,
+    #colorSlider::-webkit-slider-thumb {
+      background: #222;
+      border: 2px solid #fff;
+      width: 24px;
+      height: 24px;
+      image-rendering: pixelated;
+    }
+    #pixelSlider::-moz-range-thumb,
+    #colorSlider::-moz-range-thumb {
+      background: #222;
+      border: 2px solid #fff;
+      width: 24px;
+      height: 24px;
+      image-rendering: pixelated;
+    }
+
+    /* Blocky retro label text */
+    .slider-container label {
+      font-family: monospace;
+      display: block;
+      font-size: 0.9rem;
+      margin-bottom: 2px;
+    }
+
     input[type=file] { display: none; }
   </style>
 </head>
 <body>
 
 <div class="container">
-  <!-- Section 1: Image Upload -->
+  <!-- Section 1: Original -->
   <div class="section" id="uploadSection">
-    <div class="header">Select or Drag Image</div>
+    <div class="header">Original</div>
     <input type="file" id="fileInput" accept="image/*">
     <label for="fileInput" style="cursor:pointer; color:#0af; position:absolute; bottom:40px;">Click to select</label>
     <p style="font-size:0.8rem; color:#aaa; position:absolute; bottom:20px;">or drag image here</p>
@@ -79,6 +187,7 @@
   <!-- Section 2: Scanline -->
   <div class="section" id="scanlineSection">
     <div class="header">Scanline</div>
+    <button class="download-btn" id="downloadScanline">Download</button>
     <div class="slider-container">
       <label>Scanline Density:
         <input type="range" id="scanlineSlider" min="1" max="10" value="2">
@@ -89,6 +198,7 @@
   <!-- Section 3: ASCII -->
   <div class="section" id="asciiSection">
     <div class="header">ASCII</div>
+    <button class="download-btn" id="downloadASCII">Download</button>
     <div class="slider-container">
       <label>ASCII Scale:
         <input type="range" id="asciiSlider" min="20" max="200" value="100">
@@ -99,6 +209,7 @@
   <!-- Section 4: Pixel Art -->
   <div class="section" id="pixelSection">
     <div class="header">Pixel Art</div>
+    <button class="download-btn" id="downloadPixel">Download</button>
     <div class="slider-container">
       <label>Pixel Block Size:
         <input type="range" id="pixelSlider" min="1" max="20" value="3">
@@ -123,15 +234,34 @@ const scanlineSlider = document.getElementById('scanlineSlider');
 const asciiSlider = document.getElementById('asciiSlider');
 
 let img = new Image();
-img.src = "https://i.imgur.com/6oK2hZb.jpg"; // default image
-img.onload = () => { 
-  uploadSection.style.backgroundImage = `url(${img.src})`;
-  drawScanline(); drawPixelArt(); drawASCII();
+img.src = "./test_images2/ezgif-frame-166.jpg"; // default image
+
+// Store canvases for download
+let canvases = {
+  scanline: null,
+  ascii: null,
+  pixel: null
 };
+
+// Draw default image immediately (even if cached)
+function processDefaultImage() {
+  uploadSection.style.backgroundImage = `url(${img.src})`;
+  uploadSection.style.backgroundSize = "cover";
+  uploadSection.style.backgroundPosition = "center";
+  drawScanline();
+  drawPixelArt();
+  drawASCII();
+}
+
+if (img.complete) {
+  processDefaultImage();
+} else {
+  img.onload = processDefaultImage;
+}
 
 // Drag & drop
 uploadSection.addEventListener('dragover', e => { e.preventDefault(); uploadSection.style.background = "#333"; });
-uploadSection.addEventListener('dragleave', e => { e.preventDefault(); uploadSection.style.background = "#2c2c3f"; });
+uploadSection.addEventListener('dragleave', e => { e.preventDefault(); uploadSection.style.background = "#252525"; });
 uploadSection.addEventListener('drop', e => {
   e.preventDefault();
   const file = e.dataTransfer.files[0];
@@ -151,8 +281,9 @@ function loadImage(file) {
   reader.readAsDataURL(file);
 }
 
-function setSectionBackground(canvas, section) {
+function setSectionBackground(canvas, section, key) {
   section.style.backgroundImage = `url(${canvas.toDataURL()})`;
+  canvases[key] = canvas; // save for download
 }
 
 // Scanline
@@ -180,7 +311,7 @@ function drawScanline() {
     }
   }
   ctx.putImageData(imageData,0,0);
-  setSectionBackground(canvas, scanlineSection);
+  setSectionBackground(canvas, scanlineSection, "scanline");
 }
 
 // Pixel Art
@@ -239,7 +370,7 @@ function drawPixelArt() {
     }
   }
   ctx.putImageData(imageData,0,0);
-  setSectionBackground(canvas, pixelSection);
+  setSectionBackground(canvas, pixelSection, "pixel");
 }
 
 // ASCII
@@ -271,7 +402,7 @@ function drawASCII() {
       ctx.fillText(char, x*(w/tempCanvas.width), y*(h/tempCanvas.height));
     }
   }
-  setSectionBackground(canvas, asciiSection);
+  setSectionBackground(canvas, asciiSection, "ascii");
 }
 
 // Event listeners
@@ -283,6 +414,25 @@ asciiSlider.addEventListener('input', drawASCII);
 window.addEventListener('resize', () => {
   if(img.src) { drawScanline(); drawPixelArt(); drawASCII(); }
 });
+
+// Download handlers
+document.getElementById("downloadScanline").addEventListener("click", () => {
+  downloadCanvas(canvases.scanline, "scanline.png");
+});
+document.getElementById("downloadASCII").addEventListener("click", () => {
+  downloadCanvas(canvases.ascii, "ascii.png");
+});
+document.getElementById("downloadPixel").addEventListener("click", () => {
+  downloadCanvas(canvases.pixel, "pixel.png");
+});
+
+function downloadCanvas(canvas, filename) {
+  if (!canvas) return;
+  const link = document.createElement("a");
+  link.download = filename;
+  link.href = canvas.toDataURL();
+  link.click();
+}
 </script>
 
 </body>
