--- a/windows98.html
+++ b/windows98.html
@@ -60,8 +60,10 @@
                 </div>
             </div>
             <div class="window-body">
-                <p>Welcome to Windows 98!</p>
-                <p>This is a draggable window. Use the buttons on the top right to minimize, maximize, or close.</p>
+                <!-- <p>Welcome to Windows 98!</p>
+                <p>This is a draggable window. Use the buttons on the top right to minimize, maximize, or close.</p> -->
+                    <iframe id="ie-frame" src="searchbox.html" frameborder="0" style="width:100%; height:100%;"></iframe>
+
             </div>
         </div>
     </div>
