--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
   <section class="two">
     <iframe src="pixel_art_page.html" ></iframe>
   </section>
-  <section class="three"><iframe src="windows98.html" ></iframe></section>
+  <section class="three"><iframe src="monitor_screen.html" ></iframe></section>
   <section class="four"><iframe src="lots_of_square_cursor.html" ></iframe></section>
 
   <!-- Side Panel Dot Navigation -->
