--- a/windows98.html
+++ b/windows98.html
@@ -8,7 +8,7 @@
     <style>
         :root{--surface:#c0c0c0;--text:#222;--highlight:#fff;--shadow:#808080;--frame:#0a0a0a;--blue:#000080;--blue-light:#1084d0;--link-blue:#00f;--border-raised:inset -1px -1px var(--frame),inset 1px 1px var(--highlight),inset -2px -2px var(--shadow),inset 2px 2px var(--surface);--border-sunken:inset -1px -1px var(--highlight),inset 1px 1px var(--frame),inset -2px -2px var(--surface),inset 2px 2px var(--shadow);--border-window:inset -1px -1px var(--frame),inset 1px 1px var(--surface),inset -2px -2px var(--shadow),inset 2px 2px var(--highlight);}
         @font-face{font-family:"Pixelated MS Sans Serif";src:url("https://win98icons.alexmeub.com/fonts/ms_sans_serif.woff2");}
-        body{font-family:"Pixelated MS Sans Serif",Arial;-webkit-font-smoothing:none;font-size:11px;background:#008080;overflow:hidden;margin:0;height:100vh;display:flex;flex-direction:column;}
+        body{font-family:"Pixelated MS Sans Serif",Arial;-webkit-font-smoothing:none;font-size:11px;background:#008080;overflow:hidden;margin:0;height:100vh;display:flex;flex-direction:column;overflow: hidden;}
         button,input[type=submit],input[type=reset]{box-sizing:border-box;border:none;color:var(--text);background:var(--surface);box-shadow:var(--border-raised);min-width:75px;min-height:23px;padding:0 12px;}
         button:not(:disabled):active,input[type=submit]:not(:disabled):active,input[type=reset]:not(:disabled):active{box-shadow:var(--border-sunken);text-shadow:1px 1px var(--text);}
         button:focus{outline:1px dotted var(--frame);outline-offset:-4px;}
