--- a/searchbox.html
+++ b/searchbox.html
@@ -18,9 +18,19 @@
 
     #searchBar {
       display: flex;
+      align-items: center;
       padding: 5px;
       background: #000080;
       border-bottom: 2px solid #808080;
+    }
+
+    #backButton {
+      padding: 5px 10px;
+      font-size: 14px;
+      border: 2px outset #fff;
+      background: #c0c0c0;
+      cursor: pointer;
+      margin-right: 5px;
     }
 
     #urlInput {
@@ -78,12 +88,13 @@
 <body>
 
   <div id="searchBar">
-    <input type="text" id="urlInput" placeholder="Enter a URL, e.g., https://example.com">
+    <button id="backButton">←</button>
+    <input type="text" id="urlInput" placeholder="Enter a URL, e.g., https://wikipedia.com">
     <button id="goButton">Go</button>
   </div>
 
   <div id="webviewContainer">
-    <iframe id="webview" src="https://example.com"></iframe>
+    <iframe id="webview" src="https://wikipedia.com"></iframe>
     <div id="fallbackLink">
       <p>This site cannot be embedded.<br><a id="externalLink" href="#" target="_blank">Open in new tab</a></p>
     </div>
@@ -91,6 +102,7 @@
 
   <script>
     const goButton = document.getElementById('goButton');
+    const backButton = document.getElementById('backButton');
     const urlInput = document.getElementById('urlInput');
     const webview = document.getElementById('webview');
     const fallbackLink = document.getElementById('fallbackLink');
@@ -104,23 +116,41 @@
         url = 'https://' + url;
       }
 
-      // Hide fallback first
       fallbackLink.style.display = 'none';
+      webview.style.display = 'block';
       webview.src = url;
+      externalLink.href = url;
 
-      // Wait a bit to detect failure
-      setTimeout(() => {
-        try {
-          const doc = webview.contentDocument || webview.contentWindow.document;
-          // If we can access, hide fallback
-          fallbackLink.style.display = 'none';
-        } catch (e) {
-          // Blocked by X-Frame-Options
-          fallbackLink.style.display = 'block';
-          externalLink.href = webview.src;
-        }
-      }, 500); // half-second delay
+      const timeout = setTimeout(() => {
+        showFallback();
+      }, 3000);
+
+      webview.onload = () => {
+        clearTimeout(timeout);
+        fallbackLink.style.display = 'none';
+      };
+
+      webview.onerror = () => {
+        clearTimeout(timeout);
+        showFallback();
+      };
     }
+
+    function showFallback() {
+      webview.style.display = 'none';
+      fallbackLink.style.display = 'block';
+    }
+
+    // Go to previous page in iframe history (if available)
+    backButton.addEventListener('click', () => {
+      const frameWindow = webview.contentWindow;
+      try {
+        frameWindow.history.back();
+      } catch {
+        // If same-origin policy blocks it, just reload the last URL
+        webview.src = webview.src;
+      }
+    });
 
     goButton.addEventListener('click', loadURL);
     urlInput.addEventListener('keypress', (e) => {
