--- a/flipclock.html
+++ b/flipclock.html
@@ -5,11 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Fullscreen Flip Counter (3 digits)</title>
 <style>
-  :root{
+  /* :root{
     --bg:#0f1724;
     --face:#18273b;
     --seam:#0a0f1c;
     --text:#e6eef6;
+  } */
+:root{
+    --bg:#ffffff;
+    --face:#ffffff;
+    --seam:#ffffff;
+    --text:#000000;
   }
 
   html, body {
