--- a/new_grid_page_part01.html
+++ b/new_grid_page_part01.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Interactive Grid Layout</title>
 
+<!-- Import font only for selective use -->
 <link href="https://fonts.cdnfonts.com/css/quantie" rel="stylesheet">
 
 <style>
@@ -14,61 +15,52 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Quantie', sans-serif;
-    margin: 0; /* Ensures no default browser margins */
+    font-family: sans-serif; /* Default font for all */
+    margin: 0;
+    padding-top: 1%;
+    padding-left: 5%;
+    padding-right: 5%;
   }
 
   .grid {
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr 2fr 2fr 2fr;
-    grid-template-rows: 3fr 2fr 1fr 4fr 1fr;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 3fr 0.5fr 1fr 0.5fr 1fr 4fr 1fr 1fr;
     gap: 1px;
-    width: 100vw;  /* Stretches to full viewport width */
-    height: 100vh; /* Stretches to full viewport height */
+    width: 100vw;
+    height: 100vh;
   }
 
   .grid div {
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     overflow: hidden;
     display: flex;
     justify-content: center;
-     align-items: center;
+    align-items: center;
+    position: relative;
+    color: rgb(70, 70, 70);
+  }
+
+  /* Stretch TEXT and IMAGES to fill cell */
+  .grid div span,
+  .grid div img {
+    width: 100%;
+    height: 100%;
+    display: block;
   }
 
   .grid div span {
-    display: block;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    font-size: 10vw; /* base size */
+    font-size: 100px;
     line-height: 1;
-    transform-origin: center;
+    text-align: center;
+    transform-origin: 0 0;
     white-space: nowrap;
   }
 
-  /* Hover effect */
-  .grid div:hover {
-    opacity: 1;
-    z-index: 1;
+  /* Apply Quantie font only to item1 */
+  .item1 span {
+    font-family: 'Quantie', sans-serif;
   }
-
-  /* Positioning grid items */
-  .item1 { grid-column: 1 / 6; grid-row: 1 / 2; }
-  .item6 { grid-column: 6 / 7; grid-row: 1 / 2; }
-
-  .item2 { grid-column: 1 / 3; grid-row: 2 / 3; }
-  .item5 { grid-column: 3 / 5; grid-row: 2 / 3; }
-  .item7 { grid-column: 5 / 7; grid-row: 2 / 3; }
-
-  .item3 { grid-column: 1 / 2; grid-row: 3 / 4; }
-  .item8 { grid-column: 2 / 6; grid-row: 3 / 4; }
-  .item10 { grid-column: 6 / 7; grid-row: 3 / 4; }
-
-  .item4 { grid-column: 1 / 3; grid-row: 4 / 5; }
-  /* .item9 { grid-column: 2 / 3; grid-row: 4 / 5; } */
-  .item11 { grid-column: 3 / 7; grid-row: 4 / 5; }
-
-  .item12 { grid-column: 1 / 7; grid-row: 5 / 6; }
 
   iframe {
     width: 100%;
@@ -76,45 +68,65 @@
     border: none;
   }
 
+  /* Grid item placement */
+  .item1 { grid-column: 1 / 6; grid-row: 1 / 2; }
+  .item6 { grid-column: 6 / 7; grid-row: 1 / 2; }
+
+  .item13 { grid-column: 1 / 7; grid-row: 2 / 3; }
+
+  .item2 { grid-column: 1 / 3; grid-row: 3 / 4; }
+  .item5 { grid-column: 3 / 5; grid-row: 3 / 4; }
+  .item7 { grid-column: 5 / 7; grid-row: 3 / 4; }
+
+  .item14 { grid-column: 1 / 7; grid-row: 4 / 5; }
 
 
+  .item3 { grid-column: 1 / 2; grid-row: 5 / 6; }
+  .item8 { grid-column: 2 / 6; grid-row: 5 / 6; }
+  .item10 { grid-column: 6 / 7; grid-row: 5 / 6; }
 
-  
+  .item4 { grid-column: 1 / 3; grid-row: 6 / 7; }
+  .item11 { grid-column: 3 / 7; grid-row: 6 / 7; }
+
+  .item12 { grid-column: 1 / 7; grid-row: 7 / 8; }
 </style>
 </head>
 
 <body>
   <div class="grid">
-    <div class="item1" style="color: rgb(70, 70, 70);justify-content: flex-start;"><span>torquelore</span></div>
-    <div class="item2">interface</div>
-    <div class="item3">1997</div>
+    <div class="item1" style="color: rgb(70, 70, 70); justify-content: flex-start;">
+      <span>TORQUELORE</span>
+    </div>
+    <div class="item13"></div>
+    <div class="item2"><span>INTERFACE</span></div>
+    <div class="item14"></div>
+
+    <div class="item3"><span>1997</span></div>
     <div class="item4"><iframe src="flipclock.html"></iframe></div>
     <div class="item5"></div>
     <div class="item6"></div>
-    <div class="item7">humanoid</div>
+    <div class="item7"><span>HUMANOID</span></div>
     <div class="item8"></div>
-    <!-- <div class="item9"></div> -->
-    <div class="item10">2025</div>
+    <div class="item10"><span>2025</span></div>
     <div class="item11">
-      <img src="page_images/barcode_bmw.png">
+      <img src="page_images/barcode_bmw.png" alt="barcode">
     </div>
     <div class="item12"></div>
   </div>
 
   <script>
-    // Dynamically scale text to fill div
-    function scaleText() {
+    // Stretch text to match div size (true distortion)
+    function stretchText() {
       document.querySelectorAll('.grid div span').forEach(span => {
         const parent = span.parentElement;
         const scaleX = parent.clientWidth / span.scrollWidth;
         const scaleY = parent.clientHeight / span.scrollHeight;
-        const scale = Math.min(scaleX, scaleY);
-        span.style.transform = `scale(${scale}, ${scale})`;
+        span.style.transform = `scale(${scaleX}, ${scaleY})`;
       });
     }
 
-    window.addEventListener('load', scaleText);
-    window.addEventListener('resize', scaleText);
+    window.addEventListener('load', stretchText);
+    window.addEventListener('resize', stretchText);
   </script>
 </body>
 </html>
