--- a/ps_player.html
+++ b/ps_player.html
@@ -493,7 +493,7 @@
         async function initializePlaylist() {
             const hardcodedMusicData = [
                 {
-                    "filename": "./music/_Sunstroke_Project_Olia_Tira_._-_Run_Away_-_(mp3.pm).mp3",
+                    "filename": "./music/Sunstroke_Project_Olia_Tira_Run_Away.mp3",
                     "title": "Run_Away",
                     "artist": "Sunstroke",
                     "album": ""
