--- a/ps_player_old.html
+++ b/ps_player_old.html
@@ -113,7 +113,12 @@ ul#musicList li img.rotating-list-item {
 .search_box{grid-area:1/2/2/3;display:flex;align-items:center;justify-content:center;min-width:0;border:5px solid transparent;border-radius:15px}
 .list{grid-area:2/2/5/3;overflow-y:auto;min-width:0;min-height:0;border:5px solid transparent;border-radius:15px;background:linear-gradient(to top,#7e7e7e,#2e2e2e) padding-box,linear-gradient(to bottom,#7e7e7e,#2e2e2e) border-box}
 @media (max-width:900px){
-.grid{grid-template-columns:1fr;grid-template-rows:auto auto auto 1fr;padding:1rem;gap:1rem}
+.grid{
+    grid-template-columns:1fr;
+    grid-template-rows:35vh auto 5vh 1fr; 
+    padding:1rem;
+    gap:1rem
+}
 .player{grid-area:1/1/2/2}
 .controls{grid-area:2/1/3/2;padding:1rem 0}
 .search_box{grid-area:3/1/4/2}
